# movim

./: .bzrignore  .codeclimate.yml  .dir-locals.el  .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .htaccess  .php_cs  .travis.yml  CHANGELOG.md  CMakeLists.txt  Containerfile  Dockerfile  INSTALL.md  KWStyle.xml  README.md  SECURITY.md  VERSION  bootstrap.php  build.sh  codeclimate-config.patch  composer.json  daemon.php  database.php  doap.xml  docker-entrypoint.sh  image.php  index.php  infos.php  init.php  install.php  jajax.php  jaxl.sh  linker.php  loader.php  manifest.webapp  movimcall.dtd  (+11 more)
.github/: FUNDING.yml
admin/: buttons.php  error.php  index.php  part0.php  part1.php  part2.php  part3.php  part4.php  part5.php  part6.php  template.php
app/: Affiliation.php  Attachment.php  Bundle.php  BundleCapabilityResolver.php  BundleSession.php  Cache.php  Capability.php  Conference.php  Configuration.php  Contact.php  Draft.php  DraftEmbed.php  Emoji.php  EmojisPack.php  EncryptedPassword.php  Hat.php  Identity.php  Info.php  Invite.php  MAMEarliest.php  Member.php  Message.php  MessageBuffer.php  MessageFile.php  MessageOmemoHeader.php  MujiCall.php  MujiCallParticipant.php  OpenChat.php  Post.php  PostComment.php  Presence.php  PresenceBuffer.php  PresenceBufferSaver.php  PushSubscription.php  Reaction.php  Reported.php  Roster.php  Session.php  Sticker.php  StickersPack.php  (+5 more)
config/: conf.xml  daemon.php  database.php  db.example.inc.php  db.example.ini  paths.php
debian/: conffiles  config  postinst  postrm  templates
documentation/: Doxyfile  Makefile  movim-core.texi  movim.eps  movim.texi  texi.css  texi2htmlrc
emoji/: CompiledEmoji.php  MovimEmoji.php  compile-file-list.sh  replace-test.php  test-all-images.sh
i18n/: ar.po  be.po  br.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  fr_fr.po  gl.po  he.po  it.po  ja.po  messages.pot  nl.po  no.po  oc.po  pt.po  ro.po  ru.po  tr.po  uk.po  update_trans.sh  zh.po
install/: buttons.php  error.php  index.php  part0.php  part1.php  part2.php  part3.php  part4.php  part5.php  part6.php  style2.css  template.php
js/: hash.js  hash_test.html  jaxl.func.js  jquery.js  movim.js  movimrpc.js
lib/: Ajaxer.php  Cache.php  Conf.php  Controller.php  Dispatcher.php  EventHandler.php  Event_handler.php  Form.php  GetConf.php  JingletoSDP.php  Lazy.php  MagpieRSS.php  Markdown.php  MovimException.php  MovimRPC.php  PageBuilder.php  RainTPL.php  SDPtoJingle.php  User.php  Utils.php  Widget.php  WidgetWrapper.php  XMPPConnect.php  XMPPtoForm.php  i18n.php
locales/: ach.po  ady.po  af.po  am.po  ar.po  be.po  bg.po  bn.po  br.po  ca.po  cs.po  cz.po  da.po  de.po  el.po  en.po  en_ca.po  en_sg.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  io.po  is.po  it.po  ja.po  jbo.po  kk.po  ko.po  la.po  lb.po  (+33 more)
(+3081 files in other folders)
